--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.1.1",
+    "eslint-config-next": "^13.2.0",
+    "next": "^13.2.0",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
